@@ -8,7 +8,13 @@ import java.lang.management.GarbageCollectorMXBean;
 import java.lang.management.ManagementFactory;
 import java.util.List;
 
+//-Xmx32m
+//-XX:+UseSerialGC
+//-XX:+UseParallelGC
+//-XX:+UseConcMarkSweepGC
+
 public class Main {
+    static long totalDuration = 0;
     public static void main(String[] args) throws Exception {
         System.out.println( "Starting pid: " + ManagementFactory.getRuntimeMXBean().getName() );
         switchOnMonitoring();
@@ -17,7 +23,7 @@ public class Main {
         My my = new My();
         ObjectName name = new ObjectName("ru.selezneva:type=My");
         mBeanServer.registerMBean(my, name);
-        my.setCount(1000);
+        my.setCount(1_000_000_00);
         my.run();
     }
 
@@ -35,8 +41,10 @@ public class Main {
 
                     long startTime = info.getGcInfo().getStartTime();
                     long duration = info.getGcInfo().getDuration();
+                    totalDuration += duration;
 
                     System.out.println( "start:" + startTime + " Name:" + gcName + ", action:" + gcAction + ", gcCause:" + gcCause + "(" + duration + " ms)" );
+                    System.out.println("Total duration " + totalDuration);
                 }
             };
             emitter.addNotificationListener( listener, null, null );
